<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.abrahamyeah.app3.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewNombre"
            android:textSize="@dimen/textosView"
            android:layout_marginRight="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintVertical_bias="0.066" />

        <EditText
            android:id="@+id/editNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="16dp" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/LinearDireccion"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewDireccion"
            android:textSize="@dimen/textosView"
            android:layout_marginRight="16dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="91dp" />
        <EditText
            android:id="@+id/editDirecion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="80dp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearTelefono"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textViewTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewTelefono"
            android:textSize="@dimen/textosView"
            android:layout_marginRight="24dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="151dp" />

        <EditText
            android:id="@+id/editTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="142dp" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewFechaNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextViewFechaNac"
        android:textSize="@dimen/textosView"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="211dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="273dp">
    <DatePicker
        android:id="@+id/Picker1"
        android:layout_width="328dp"
        android:layout_height="273dp"
        android:layout_marginLeft="30dp"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="244dp" />
    </ScrollView>
    </LinearLayout>
    <Button
        android:id="@+id/btnEnviar"
        android:text="@string/btnEnviar"
        android:textStyle="bold"
        android:textSize="@dimen/textosView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
